removed json from form.component.html

--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -18,5 +18,5 @@
 	<br>
 	<br>
 
-	<pre>formService.entry: {{formService.entry | json}}</pre>
+	<!-- <pre>formService.entry: {{formService.entry | json}}</pre> -->
 </div>
