--- a/mitzvah/src/app/form-venue/form-venue.component.html
+++ b/mitzvah/src/app/form-venue/form-venue.component.html
@@ -2,9 +2,9 @@
 <table>
 	<tr>
 		<th></th>
-		<th>Strongly Prefer</th>
-		<th>Indifferent</th>
-		<th>Would not like this venue</th>
+		<th class="top">Strongly Prefer</th>
+		<th class="top">Indifferent</th>
+		<th class="top">Would not like this venue</th>
 	</tr>
 	<tr *ngFor="let venue of models">
 		<th>{{venue.name}}</th>
