--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -1,22 +1,43 @@
 <div class="form-component">
 	<br>
-	<button class="btn btn-secondary btn-lg back" (click)="move(-1)" [disabled]="step===0 || invalidform()">BACK</button>
-	<button class="btn btn-secondary btn-lg forward" (click)="move(1)" [disabled]="step===3 || invalidform()">NEXT</button>
+	<button class="btn btn-secondary btn-lg back" (click)="move(-1)" [disabled]="step===0 || invalidform()">
+	BACK
+	</button>
+	<button  *ngIf="step<3" class="btn btn-secondary btn-lg forward" (click)="move(1)" [disabled]="step===3 || invalidform()">
+	NEXT
+	</button>
+	<button *ngIf="step==3" class="btn btn-primary btn-lg forward"  (click)="submit()" [disabled]="invalidform()">
+	SUBMIT
+	</button>
 	<br>
 	<br>
-	<app-form-student #studentform [hidden]="step!==0"></app-form-student>
-	<app-form-venue #venueform [hidden]="step!==1"></app-form-venue>
-	<app-form-date #dateform [hidden]="step!==2"></app-form-date>
-	<app-form-accommodation #accommodationform [hidden]="step!==3"></app-form-accommodation>
+	<app-form-student #studentform [hidden]="step!==0">
+	</app-form-student>
+	<app-form-venue #venueform [hidden]="step!==1">
+	</app-form-venue>
+	<app-form-date #dateform [hidden]="step!==2">
+	</app-form-date>
+	<app-form-accommodation #accommodationform [hidden]="step!==3">
+	</app-form-accommodation>
 	<br>
 	<br>
-	<button class="btn btn-secondary btn-lg back" (click)="move(-1)" [disabled]="step===0 || invalidform()">BACK</button>
-	<button class="btn btn-secondary btn-lg forward"  (click)="move(1)" [disabled]="step===3 || invalidform()">NEXT</button>
+	<button class="btn btn-secondary btn-lg back" (click)="move(-1)" [disabled]="step===0 || invalidform()">
+	BACK
+	</button>
+	<button *ngIf="step<3" class="btn btn-secondary btn-lg forward"  (click)="move(1)" [disabled]="invalidform()"
+	>NEXT
+	</button>
+	<button *ngIf="step==3" class="btn btn-primary btn-lg forward"  (click)="submit()" [disabled]="invalidform()">
+	SUBMIT
+	</button>
 	<br>
 	<br>
 	<p><ngb-progressbar type="success" [value]="step*25"></ngb-progressbar></p>
 	<br>
 	<br>
-
-	<!-- <pre>formService.entry: {{formService.entry | json}}</pre> -->
+	<pre>
+		formService.entry: {{formService.entry | json}}
+		<br>
+		formService.schools: {{formService.schools | json}}
+	</pre>
 </div>
