--- a/mitzvah/src/styles.css
+++ b/mitzvah/src/styles.css
@@ -5,6 +5,9 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~font-awesome/css/font-awesome.min.css';
+
 
 h1 {
   color: #369;
