--- a/mitzvah/src/app/form-date/form-date.component.html
+++ b/mitzvah/src/app/form-date/form-date.component.html
@@ -1,43 +1,40 @@
 <h3>Date Requirements</h3>
-
-
 <h4>Please select any dates you know will not work for your child's B'nai Mitzvah</h4>
-
-<button class="btn btn-sm btn-outline-primary" (click)="push_date();">{{models?.length==0 ? "I will be unavailable on..." : "I will also be unavailable on..."}}</button>
-<br>
-
-
-<div style="display:flex; flex-flow: row wrap;">
-	<div style="flex:1; flex-basis: 25%;" *ngFor="let mod of models; index as i;">
-		<div style="display: inline-block; border: 2px solid black;padding: 15px; margin: 5px; border-radius: 12px;">
-			<div>
-				<b>{{mod.hdate_str}} -- {{mod.hdate_str_heb}}</b>
-				<br>
-				<ngb-datepicker #dp [(ngModel)]="mod.greg" outsideDays="hidden" (select)="mod.update()" [markDisabled]="isNotSaturday" [minDate]="minDate" [maxDate]="maxDate" [startDate]="mod.getGreg()"></ngb-datepicker>
-				<br><br>
-				<div *ngIf="have_birthday==true">
-					<button class="btn btn-sm btn-outline-info" (click)="mod.thirteen_from_h(birthday); sync(dp,mod.greg);">
-					Approximate Mitzvah Date
-					</button>
+<form #f="ngForm">
+	<button class="btn btn-sm btn-outline-primary" (click)="push_date();">{{models?.length==0 ? "I will be unavailable on..." : "I will also be unavailable on..."}}</button>
+	<br>
+	<div style="display:flex; flex-flow: row wrap;">
+		<div style="flex:1; flex-basis: 25%;" *ngFor="let mod of models; index as i;">
+			<div style="display: inline-block; border: 2px solid black;padding: 15px; margin: 5px; border-radius: 12px;">
+				<div>
+					<b>{{mod.hdate_str}} -- {{mod.hdate_str_heb}}</b>
 					<br>
+					<ngb-datepicker #dp [(ngModel)]="mod.greg" name="picked_date" outsideDays="hidden" (select)="mod.update()" [markDisabled]="isNotSaturday" [minDate]="minDate" [maxDate]="maxDate" [startDate]="mod.getGreg()"></ngb-datepicker>
+					<br><br>
+					<div *ngIf="have_birthday==true">
+						<button class="btn btn-sm btn-outline-info" (click)="mod.thirteen_from_h(birthday); sync(dp,mod.greg);">
+						Approximate Mitzvah Date
+						</button>
+						<br>
+					</div>
+					<button class="btn btn-sm btn-outline-warning" (click)="pop_date(i)">
+					Remove date
+					</button>
 				</div>
-				<button class="btn btn-sm btn-outline-warning" (click)="pop_date(i)">
-				Remove date
-				</button>
 			</div>
-		</div>
-		<br>
-		<div>
-			<div *ngIf="mod.holidays?.length!=0; else elseBlock">
-				<b>Holidays on this day:</b>
-				<ul>
-					<li *ngFor="let holiday of mod.holidays">{{holiday.desc}}</li>
-				</ul>
+			<br>
+			<div>
+				<div *ngIf="mod.holidays?.length!=0; else elseBlock">
+					<b>Holidays on this day:</b>
+					<ul>
+						<li *ngFor="let holiday of mod.holidays">{{holiday.desc}}</li>
+					</ul>
+				</div>
+				<ng-template #elseBlock>
+				<b>No holidays on this day.</b>
+				</ng-template>
 			</div>
-			<ng-template #elseBlock>
-			<b>No holidays on this day.</b>
-			</ng-template>
 		</div>
 	</div>
-</div>
-<hr/>
+	<hr/>
+</form>
