--- a/mitzvah/src/app/form-student/form-student.component.html
+++ b/mitzvah/src/app/form-student/form-student.component.html
@@ -2,85 +2,91 @@
 <p>Please fill in the information below to help Sinai Temple plan and schedule your child's B'nai Mitzvah
 	Forms submitted by March 15 th 2018 will be given first preference in terms of dates and venue selection.
 For assistance submitting this information, please contact [CONTACT EMAIL FOR PLANNING]</p>
-
-
-<div class = "container" >
-	<div class="form-group">
-		<label for="name">Email Address</label>
-		<!-- <input type="text" class="form-control" id="email" required> -->
-		<input type="email" class="form-control" [(ngModel)]="formService.entry.email" email>
-	</div>
-	<br>
-	<div class="form-group">
-		<label for="name">Child's Name</label>
-		<input type="text" class="form-control" [(ngModel)]="formService.entry.childName" required>
-	</div>
-	<br>
-	<div class="form-group" >
-		<label for="ac_school">Academic School</label>
-		<div *ngIf="all_schools.schools?.length">
-			<div *ngFor="let school of all_schools.schools">
-				<label>
-					<input  name="ac_school" type="radio" [(ngModel)]="selectedSchool" [value]="school">{{school.name}}
-				</label>
-				<br>
+<form #f="ngForm">
+	<div class = "container" >
+		<div class="form-group">
+			<label for="email">Email Address</label>
+			<!-- <input type="text" class="form-control" id="email" required> -->
+			<input required type="email" name="email" class="form-control" [(ngModel)]="formService.entry.email" #userEmail="ngModel" placeholder="Please enter a valid email address <address>@<domain>.<extension>" autocomplete='email' email>
+			<div style="color:red;" *ngIf="userEmail.invalid && (userEmail.dirty || userEmail.touched)" class="alert alert-danger">
+				Please enter a valid email address.
 			</div>
-			<label>
-				<input name="ac_school" type="radio" [(ngModel)]="selectedSchool" [value]="otherSchool"> Other
-			</label>
 		</div>
-		<div *ngIf="!all_schools.schools || all_schools.schools.length==0 || selectedSchool==otherSchool">
-			<input placeholder="Enter academic school name" name="otherSchoolName" type="text" class="form-control" [(ngModel)]="otherSchool.name" >
-		</div>
-	</div>
-	<br>
-	<div class="form-group" >
-		<label for="heb_school">Religious School</label>
-		<div *ngIf="all_schools.hebSchools?.length">
-			<div *ngFor="let school of all_schools.hebSchools">
-				<label>
-					<input  name="heb_school" type="radio" [(ngModel)]="selectedHebSchool" [value]="school">{{school.name}}
-				</label>
-				<br>
+			<br>
+			<div class="form-group">
+				<label for="name">Child's Name</label>
+				<input required type="text" name="childname" class="form-control" placeholder="Your child's name" [(ngModel)]="formService.entry.childName">
 			</div>
-			<label>
-				<input name="heb_school" type="radio" [(ngModel)]="selectedHebSchool" [value]="otherHebSchool"> Other
-			</label>
-		</div>
-		<div *ngIf="!all_schools.hebSchools || all_schools.hebSchools.length==0 || selectedHebSchool==otherHebSchool">
-			<input placeholder="Enter religious school name" name="otherHebSchoolName" type="text" class="form-control" [(ngModel)]="otherHebSchool.name" >
-		</div>
-	</div>
-	<br>
-	Date of Birth:
-	<br>
-	<div style="display:flex; flex-flow: row wrap;">
-		<div style="flex:1; flex-basis: 25%;">
-			<div style="display: inline-block; border: 2px solid black;padding: 15px; margin: 5px; border-radius: 12px;">
-				<div>
-					<b>{{model.hdate_str}} -- {{model.hdate_str_heb}}</b>
-					<br>
-					<ngb-datepicker #dp [(ngModel)]="model.greg" outsideDays="hidden" (select)="model.update()" [minDate]="minDate" [maxDate]="maxDate" [startDate]="model.getGreg()"></ngb-datepicker>
-					<br><br>
-					<div>
-						<button class="btn btn-sm btn-outline-info" (click)="model.thirteen_ago(); dp.navigateTo({ year: model.greg.year, month: model.greg.month})">
-						Thirteen Years Ago...
-						</button>
+			<br>
+			<div class="form-group" >
+				<label for="ac_school">Academic School</label>
+				<div *ngIf="all_schools.schools?.length">
+					<div *ngFor="let school of all_schools.schools">
+						<label>
+							<input  name="ac_school" type="radio" [(ngModel)]="selectedSchool" [value]="school">{{school.name}}
+						</label>
+						<br>
 					</div>
+					<label>
+						<input name="ac_school" type="radio" [(ngModel)]="selectedSchool" [value]="otherSchool"> Other
+					</label>
 				</div>
-				<br>
-				<div>
-					<div *ngIf="model.holidays?.length!=0; else elseBlock">
-						<b>Holidays on this day:</b>
-						<ul>
-							<li *ngFor="let holiday of model.holidays">{{holiday.desc}}</li>
-						</ul>
-					</div>
-					<ng-template #elseBlock>
-					<b>No holidays on this day.</b>
-					</ng-template>
+				<div [hidden]="selectedSchool!=otherSchool">
+					<input placeholder="Enter academic school name" name="otherSchoolName" type="text" class="form-control" [(ngModel)]="otherSchool.name" #otherSchoolName="ngModel" [required]="selectedSchool==otherSchool">
+					<!-- 				<div [hidden]= "!otherSchoolName.errors?.required" class="alert alert-danger" style="color:red;">
+						Enter the name of this student's academic school
+					</div> -->
 				</div>
 			</div>
+			<br>
+			<div class="form-group" >
+				<label for="heb_school">Religious School</label>
+				<div *ngIf="all_schools.hebSchools?.length">
+					<div *ngFor="let school of all_schools.hebSchools">
+						<label>
+							<input name="heb_school" type="radio" [(ngModel)]="selectedHebSchool" [value]="school">{{school.name}}
+						</label>
+						<br>
+					</div>
+					<label>
+						<input name="heb_school" type="radio" [(ngModel)]="selectedHebSchool" [value]="otherHebSchool"> Other
+					</label>
+				</div>
+				<div [hidden]="selectedHebSchool!=otherHebSchool">
+					<input [required]="selectedHebSchool==otherHebSchool" placeholder="Enter religious (Hebrew) school name" name="otherHebSchoolName" type="text" class="form-control" [(ngModel)]="otherHebSchool.name" #otherHebSchoolName="ngModel">
+				</div>
+			</div>
+			<br>
+			Date of Birth:
+			<br>
+			<div style="display:flex; flex-flow: row wrap;">
+				<div style="flex:1; flex-basis: 25%;">
+					<div style="display: inline-block; border: 2px solid black;padding: 15px; margin: 5px; border-radius: 12px;">
+						<div>
+							<b>{{model.hdate_str}} -- {{model.hdate_str_heb}}</b>
+							<br>
+							<ngb-datepicker #dp name="birthDate" [(ngModel)]="model.greg" outsideDays="hidden" (select)="model.update()" [minDate]="minDate" [maxDate]="maxDate" [startDate]="model.getGreg()"></ngb-datepicker>
+							<br><br>
+							<div>
+								<button class="btn btn-sm btn-outline-info" (click)="model.thirteen_ago(); dp.navigateTo({ year: model.greg.year, month: model.greg.month})">
+								Thirteen Years Ago...
+								</button>
+							</div>
+						</div>
+						<br>
+						<div>
+							<div *ngIf="model.holidays?.length!=0; else elseBlock">
+								<b>Holidays on this day:</b>
+								<ul>
+									<li *ngFor="let holiday of model.holidays">{{holiday.desc}}</li>
+								</ul>
+							</div>
+							<ng-template #elseBlock>
+							<b>No holidays on this day.</b>
+							</ng-template>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
+	</form>
