--- a/mitzvah/src/app/app.component.html
+++ b/mitzvah/src/app/app.component.html
@@ -4,5 +4,5 @@ Welcome to B'nai Mitzvah Scheduling!
 <a routerLink="/form">Enter your child's information</a>
 <br>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+<!-- <app-messages></app-messages> -->
 
