--- a/mitzvah/src/app/form-accommodation/form-accommodation.component.html
+++ b/mitzvah/src/app/form-accommodation/form-accommodation.component.html
@@ -8,7 +8,7 @@
 	comp.f.form.errors: {{f.form.errors}}
 </pre> -->
 <h3>Additional Information</h3>
-Is your child a twin who will be sharing the service with their sibling?
+<b>Is your child a twin who will be sharing the service with their sibling?</b>
 <br>
 <form  #f="ngForm">
 	<div class="form-group">
@@ -19,7 +19,7 @@ Is your child a twin who will be sharing the service with their sibling?
 			<input name="is_twin" [(ngModel)]="twin" type="radio" [value]="false"> No
 		</label>
 		<br>
-		What special accommodations will your child need for their service?
+		<b>What special accommodations will your child need for their service?</b>
 		<br>
 		<label >
 			<input name="needs_accommodation" [(ngModel)]="accommodation" type="radio" [value]="false"> None
