--- a/mitzvah/src/app/form-venue/form-venue.component.html
+++ b/mitzvah/src/app/form-venue/form-venue.component.html
@@ -27,7 +27,7 @@
 		</tr>
 	</table>
 	<br>
-	Would you like to hold your reception at the same venue where the services are held?
+	<b>Would you like to hold your reception at the same venue where the services are held?</b>
 	<br>
 	<label>
 		<input name="party_at_venue" [(ngModel)]="atVenue" type="radio" [value]="true"> Yes
