submit page, .change (this.router.navigate(['/submitted']);)

--- a/mitzvah/src/app/app.component.html
+++ b/mitzvah/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h1>{{title}}</h1>
-Welcome to B'nai Mitzvah Scheduling!
 <br>
-<a routerLink="/form">Enter your child's information</a>
-<br>
+<!-- <a routerLink="/form">Enter your child's information</a>
+<br> -->
 <router-outlet></router-outlet>
 <!-- <app-messages></app-messages> -->
 
