--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -21,6 +21,10 @@
 		</div>
 	</div>
 </div> -->
+<p [hidden]="step>0"> Please fill in the information below to help Sinai Temple plan and schedule your child's B'nai Mitzvah
+	Forms submitted by March 15 th 2018 will be given first preference in terms of dates and venue selection.</p>
+<p>
+For assistance submitting this information, please contact [CONTACT EMAIL FOR PLANNING]</p>
 
 <div class="form-component">
 	<br>
