--- a/mitzvah/src/app/not-found/not-found.component.html
+++ b/mitzvah/src/app/not-found/not-found.component.html
@@ -1,3 +1,6 @@
+Welcome to B'nai Mitzvah Scheduling!
+<br>
+<br>
 What do you want to do?
 <ul>
 	<li><a routerLink='/form'>Submit your child's information</a></li>
