--- a/mitzvah/src/styles.css
+++ b/mitzvah/src/styles.css
@@ -24,6 +24,23 @@ h2, h3 {
   font-family: Arial, Helvetica, sans-serif;
   /*font-weight: lighter;*/
 }
+
+hr {
+      display: block;
+      position: relative;
+      padding: 0;
+      margin: 8px auto;
+      height: 0;
+      width: 100%;
+      max-height: 0;
+      font-size: 1px;
+      line-height: 0;
+      clear: both;
+      border: none;
+      border-top: 1px solid #aaaaaa;
+      border-bottom: 1px solid #ffffff;
+   }
+
 input[text], button {
   color: #888;
   font-family: Cambria, Georgia;
