--- a/mitzvah/src/app/form-date/form-date.component.html
+++ b/mitzvah/src/app/form-date/form-date.component.html
@@ -2,6 +2,9 @@
 <h4>Please select any dates you know will not work for your child's B'nai Mitzvah</h4>
 <form #f="ngForm">
 	<button class="btn btn-sm btn-outline-primary" (click)="push_date();">{{models?.length==0 ? "I will be unavailable on..." : "I will also be unavailable on..."}}</button>
+
+	<b style="color:red;" *ngIf="pushed">You will be unavailable on {{models.length}} dates.</b>
+
 	<br>
 	<div style="display:flex; flex-flow: row wrap;">
 		<div style="flex:1; flex-basis: 25%;" *ngFor="let mod of models; index as i;">
@@ -9,7 +12,7 @@
 				<div>
 					<b>{{mod.hdate_str}} -- {{mod.hdate_str_heb}}</b>
 					<br>
-					<ngb-datepicker #dp [(ngModel)]="mod.greg" name="picked_date" outsideDays="hidden" (select)="mod.update()" [markDisabled]="isNotSaturday" [minDate]="minDate" [maxDate]="maxDate" [startDate]="mod.getGreg()"></ngb-datepicker>
+					<ngb-datepicker #dp [(ngModel)]="mod.greg" name="picked_date_{{i}}" outsideDays="hidden" (select)="mod.update()" [markDisabled]="isNotSaturday" [minDate]="minDate" [maxDate]="maxDate" [startDate]="mod.getGreg()"></ngb-datepicker>
 					<br><br>
 					<div *ngIf="have_birthday==true">
 						<button class="btn btn-sm btn-outline-info" (click)="mod.thirteen_from_h(birthday); sync(dp,mod.greg);">
