--- a/mitzvah/src/app/submissions/submissions.component.html
+++ b/mitzvah/src/app/submissions/submissions.component.html
@@ -16,6 +16,9 @@
 	where <code>something</code> is provided by the administrator.)
 </div>
 <h4>Student Submissions:</h4>
+DOWNLOAD AS CSV
+
+
 <div style="overflow-x:auto;">
 	<table *ngIf="submissions?.length >0">
 		<tr>
